--- a/index (2).html
+++ b/index (2).html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <ul> <img src="631.spg" alt="">
+  <enter></enter> </ul>
 </head>
 <body>
   <h1> Lanchonete Quarteto Salgado </h1>
